--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -60,7 +60,7 @@ For a better visual experience, we recommend using similar length size for the h
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/c612ccf8-7c98-4213-92b9-2fdf6f0f1398" />
     <Caption>
-      Don't use different lenght sizes for the title or the description.
+      Don't use different length sizes for the title or the description.
     </Caption>
   </Dont>
 </DoDontContainer>
