--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -53,7 +53,7 @@ For a better visual experience, we recommend using similar length size for the h
   <Do>
     <img src="https://github.com/primer/brand/assets/912236/66394dda-13de-4c86-bd82-534d99d593d8" />
     <Caption>
-      Use the same type of visual asset for all cards and a similar lenght size
+      Use the same type of visual asset for all cards and a similar length size
       for the content.
     </Caption>
   </Do>
