--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -39,7 +39,7 @@ The call to action label indicates the action or resource the card links to. It 
 
 ## Usage
 
-Use cards to summarize the core idea behind some content and link to its detailed resource. Always display information in a compact way and avoid long texts or complex information.
+Use cards to summarize the central idea behind some content and provide a link to its corresponding detailed resource. It is important to present the information in a concise manner, avoiding lengthy and complex descriptions``
 
 Cards should always be used in groups of two or more related concepts.
 
