--- a/apps/docs/content/components/Label/index.mdx
+++ b/apps/docs/content/components/Label/index.mdx
@@ -21,8 +21,8 @@ Use labels to indicate the status of an item or to help oraganize and categorize
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/aecf5346-e054-4dc0-b9a8-e4546bec4795" />
     <Caption>
-      Don't use labels as an interactive element. Use a button component
-      instead.
+      Don't use labels as an interactive or navigational element. Use a button
+      or a link component.
     </Caption>
   </Dont>
 </DoDontContainer>
