--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -9,37 +9,9 @@ description: Use Card to group information in a compact way and link to other pa
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
-## Anatomy
-
-![An image showing the Card anatomy with an icon as a visual asset, a heading, a description and a CTA text in a vertical order.](https://github.com/primer/brand/assets/912236/633b83d8-4ea8-49bd-9d6c-45a1989060d9)
-
-### Visual asset
-
-The visual asset is optional and can be an image or an icon. It can be used to provide a visual cue to the user about the content of the card. To avoid visual noise, we recommend using only one icon or image, but not both in the same card.
-
-![An image showing two Cards, one with an Icon and another with an Image as the visual assets options.](https://github.com/primer/brand/assets/912236/be65583b-f6f0-438a-8d2c-6b7a0a9fd3de)
-
-### Label
-
-The label can be used to indicate the type of content or its status. For example, use it to indicate that the content is `new` or that it is a `beta` feature. The label is optional and can be used along with a visual asset.
-
-![An image showing two Cards, one with a Label and another one with Label and Icon.](https://github.com/primer/brand/assets/912236/2d84fe89-2735-451e-9d1f-9a2f0297e7b5)
-
-### Heading
-
-The heading is the main title of the card. It should be short and concise.
-
-### Description
-
-The description is an optional short text that extends the information provided by the heading.
-
-### Call to action
-
-The call to action label indicates the action or resource the card links to. It defaults to "Learn more".
-
 ## Usage
 
-Use cards to summarize the central idea behind some content and provide a link to its corresponding detailed resource. It is important to present the information in a concise manner, avoiding lengthy and complex descriptions``
+Use cards to summarize the central idea behind some content and provide a link to its corresponding detailed resource. It is important to present the information in a concise manner, avoiding lengthy and complex descriptions.
 
 Cards should always be used in groups of two or more related concepts.
 
@@ -100,3 +72,44 @@ Cards typically appear in groups of three or four. For rows of four cards, we re
     </Caption>
   </Dont>
 </DoDontContainer>
+
+## Anatomy
+
+![An image showing the Card anatomy with an icon as a visual asset, a heading, a description and a CTA text in a vertical order.](https://github.com/primer/brand/assets/912236/633b83d8-4ea8-49bd-9d6c-45a1989060d9)
+
+### Visual asset
+
+The visual asset is optional and can be an image or an icon. It can be used to provide a visual cue to the user about the content of the card. To avoid visual noise, we recommend using only one icon or image, but not both in the same card.
+
+![An image showing two Cards, one with an Icon and another with an Image as the visual assets options.](https://github.com/primer/brand/assets/912236/be65583b-f6f0-438a-8d2c-6b7a0a9fd3de)
+
+<DoDontContainer>
+  <Do>
+    <img src="https://github.com/primer/brand/assets/912236/1d1b8cb6-6086-4389-8d2a-332515b11197" />
+    <Caption>Use only one visual asset per card.</Caption>
+  </Do>
+  <Dont>
+    <img src="https://github.com/primer/brand/assets/912236/f70adf24-8447-4ca8-8602-84445ea277e0" />
+    <Caption>
+      Don't use both an icon and an image as the visual asset in the same card.
+    </Caption>
+  </Dont>
+</DoDontContainer>
+
+### Label
+
+The label can be used to indicate the type of content or its status. For example, use it to indicate that the content is `new` or that it is a `beta` feature. The label is optional and can be used along with a visual asset.
+
+![An image showing two Cards, one with a Label and another one with Label and Icon.](https://github.com/primer/brand/assets/912236/2d84fe89-2735-451e-9d1f-9a2f0297e7b5)
+
+### Heading
+
+The heading is the main title of the card. It should be short and concise.
+
+### Description
+
+The description is an optional short text that extends the information provided by the heading.
+
+### Call to action
+
+The call to action label indicates the action or resource the card links to. It defaults to "Learn more".
