Add related components section

--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -56,7 +56,7 @@ When using an image as the visual asset, we recommend using the same aspect rati
   </Dont>
 </DoDontContainer>
 
-Cards typically appear in groups of three or four in desktop viewports. For smaller viewports, or when more than four cards, we recommend stacking the cards vertically. You can use the [Grid](/components/Grid) component to achieve this.
+Cards typically appear in groups of three or four in desktop viewports. For smaller viewports, or when more than four cards are needed, we recommend stacking the cards vertically. You can use the [Grid](/components/Grid) or the [Stack](/components/Stack) component to achieve this.
 
 <div>
   <CustomVideoPlayer
@@ -64,8 +64,7 @@ Cards typically appear in groups of three or four in desktop viewports. For smal
     src="https://github.com/primer/brand/assets/912236/e4ac4ed3-4190-4e8b-b467-364fe880aa30"
   />
   <Caption>
-    Stack cards vertically using multiple rows so that the content has the right
-    line lenght and is easy to scan.
+    Stack cards vertically so that the content has enough line length.
   </Caption>
 </div>
 
@@ -109,3 +108,9 @@ The description is an optional short text that extends the information provided 
 ### Call to action
 
 The call to action label indicates the action or resource the card links to. It defaults to "Learn more".
+
+## Related components
+
+- To display non-navigational related content in a compact way, use the [Pillar](/components/Pillar) component.
+- To display a list of plain content items, use the [UnorderedList](/components/UnorderedList) or the [OrderedList](/components/OrderedList) component.
+- To display a single block of content to draw attention or create urgency around a user action, use the [CTABanner](/components/CTABanner) component.
