--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -10,11 +10,26 @@ import CustomVideoPlayer from '../../../src/components/custom-video-player'
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
+![An image showing a card with a Copilot Octicon.](https://github.com/primer/brand/assets/912236/494d440c-98d2-4634-beec-8a80caca8926)
+
 ## Usage
 
 Use cards to summarize the central idea behind some content and provide a link to its corresponding detailed resource. It is important to present the information in a concise manner, avoiding lengthy and complex descriptions.
 
 Cards should always be used in groups of two or more related concepts.
+
+<DoDontContainer>
+  <Do>
+    <img src="https://github.com/primer/brand/assets/912236/d0da491e-8895-4ba2-9840-17eef7f2dd75" />
+    <Caption>Use cards in groups to display related information.</Caption>
+  </Do>
+  <Dont>
+    <img src="https://github.com/primer/brand/assets/912236/9f17706e-dfb1-4ef9-a87d-df6c8a1d3825" />
+    <Caption>
+      Don't use isolated cards. Consider using a CTABanner instead.
+    </Caption>
+  </Dont>
+</DoDontContainer>
 
 ### Stacked
 
@@ -22,9 +37,9 @@ Cards should be stacked to display a list of items that are related to each othe
 
 For a better visual experience, we recommend using similar length size for the heading and description in all stacked cards.
 
-<DoDontContainer stacked>
+<DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/66394dda-13de-4c86-bd82-534d99d593d8" />
+    <img src="https://github.com/primer/brand/assets/912236/fced572e-c296-4a97-aaa8-3d4b357f2f6e" />
     <Caption>
       Use the same type of visual asset for all cards and a similar length size
       for the content.
@@ -40,7 +55,7 @@ For a better visual experience, we recommend using similar length size for the h
 
 When using an image as the visual asset, we recommend using the same aspect ratio for all images. This will create a more balanced visual experience.
 
-<DoDontContainer stacked>
+<DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/912236/0ec93c16-7091-4ebb-a1a0-b0626de7833f" />
     <Caption>
