--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -95,14 +95,12 @@ The visual asset is optional and can be an image or an icon. It can be used to p
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/1d1b8cb6-6086-4389-8d2a-332515b11197" />
+    <img src="https://github.com/primer/brand/assets/912236/863de864-5216-44bf-8b35-430821da8853" />
     <Caption>Use only one visual asset per card.</Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/f70adf24-8447-4ca8-8602-84445ea277e0" />
-    <Caption>
-      Don't use both icon and image as the visual asset in the same card.
-    </Caption>
+    <img src="https://github.com/primer/brand/assets/912236/9acdde97-42e3-4a7a-8102-b9be5e3c05fc" />
+    <Caption>Don't use both icon and image as the visual asset.</Caption>
   </Dont>
 </DoDontContainer>
 
