--- a/apps/docs/content/components/Pillar/react.mdx
+++ b/apps/docs/content/components/Pillar/react.mdx
@@ -3,14 +3,17 @@ title: Pillar
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Pillar/Pillar.tsx
 storybook: '/brand/storybook/?path=/story/components-pillar--default'
-description: Use Pillar to display an informational block of text
+description: Use pillars to group related content together.
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=6849-31364&mode=design
 ---
 
 import {PillarIconColors} from '@primer/react-brand'
 import {IconColors} from '@primer/react-brand'
-import {PropTableValues} from '../../src/components'
 import {CopilotIcon, RocketIcon, GitBranchIcon} from '@primer/octicons-react'
+import {PropTableValues} from '../../../src/components'
+
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
 
 ```js
 import {Pillar} from '@primer/react-brand'
