--- a/apps/docs/content/components/Hero.mdx
+++ b/apps/docs/content/components/Hero.mdx
@@ -90,6 +90,8 @@ Forwards `size` and `weight` props from the [Text component](/components/Text).
 | `href`      | `string`      |         | `href` for primary link             |
 | `as`        | `a`, `button` | `a`     | Applies the underlying HTML element |
 
+Forwards all props from the [Button component](/components/Button).
+
 ### Hero.SecondaryAction
 
 | name        | type          | default | description                         |
@@ -97,3 +99,5 @@ Forwards `size` and `weight` props from the [Text component](/components/Text).
 | `className` | `string`      |         | Secondary link custom class         |
 | `href`      | `string`      |         | `href` for secondary link           |
 | `as`        | `a`, `button` | `a`     | Applies the underlying HTML element |
+
+Forwards all props from the [Button component](/components/Button).
