add auto staggering

--- a/apps/docs/content/getting-started/animation.mdx
+++ b/apps/docs/content/getting-started/animation.mdx
@@ -9,7 +9,7 @@ import {Link} from 'gatsby'
 import {AnimationVariants, Label} from '@primer/react-brand'
 import {supportedComponents} from '../../scripts/components-with-animation'
 
-Several Primer Brand components provide animation presets. These components are:
+Certain Primer Brand components include animation presets. These components are:
 
 <PropTableValues
   values={supportedComponents}
@@ -20,13 +20,44 @@ Several Primer Brand components provide animation presets. These components are:
 <br />
 <br />
 
-You can use the `animation` prop available on these components to specify an animation preset.
+You can use the `animate` prop available on these components to apply one of the available animation presets directly to the component.
 
-An `AnimationProvider` is required to enable animations globally on the page. This should wrap your application, much like the `ThemeProvider`.
+<strong>Example:</strong>
+
+```jsx
+<Image animate="fade-in" />
+```
+
+### Animation component
+
+You can alternatively compose animations into your React application using the `Animate` wrapper component. This can be useful in situations where you need to animate native HTML elements, or components that don't support the `animate` prop.
+
+```js
+import {Animate} from '@primer/react-brand'
+```
+
+```jsx
+<AnimationProvider>
+  <Animate animate="fade-in">
+    <Text>This text will fade-in</Text>
+  </Animate>
+</AnimationProvider>
+```
+
+### AnimationProvider
+
+An `AnimationProvider` is first required to enable animations on the page. This component should wrap specific parts of your application code, or the entire app.
+The `AnimationProvider` assumes responsibility for triggering animations and automatically applying effects such as staggering.
+
+By default, the `AnimationProvider` will stagger animations in order of DOM appearance. This behavior can be turned off by setting `autoStaggerChildren` to `false`.
+
+The increment delta can also be increased or decreased using `staggerDelayIncrement`, which is set to 100ms by default.
 
 ```js
 import {AnimationProvider} from '@primer/react-brand'
 ```
+
+### Animation variants
 
 Supported animations types include:
 
@@ -59,7 +90,6 @@ const App = () => {
         <Image
           animate={{
             variant: animationVariant,
-            delay: 100,
           }}
           src="https://via.placeholder.com/150x75/D0D7DE/D0D7DE.png"
           alt="placeholder with gray background and no foreground text"
@@ -67,7 +97,6 @@ const App = () => {
         <Image
           animate={{
             variant: animationVariant,
-            delay: 200,
           }}
           src="https://via.placeholder.com/150x75/D0D7DE/D0D7DE.png"
           alt="placeholder with gray background and no foreground text"
@@ -75,7 +104,6 @@ const App = () => {
         <Image
           animate={{
             variant: animationVariant,
-            delay: 300,
           }}
           src="https://via.placeholder.com/150x75/D0D7DE/D0D7DE.png"
           alt="placeholder with gray background and no foreground text"
@@ -134,12 +162,14 @@ Apply animation to `River.Content` instead of the entire element.
 </AnimationProvider>
 ```
 
-### Cards
+### Cards and staggering
 
-Use `delay` to stagger animations on adjacent elements.
+`AnimationProvider` automatically applies a delay increment to all `children` that have `animation` presets defined. Extend the duration of each delay using `staggerDelayIncrement`.
+
+Alternatively, use `delay` to stagger animations on adjacent elements if this feature is toggled off.
 
 ```jsx live
-<AnimationProvider>
+<AnimationProvider staggerDelayIncrement={200}>
   <Grid>
     <Grid.Column
       span={{
@@ -147,17 +177,19 @@ Use `delay` to stagger animations on adjacent elements.
         large: 6,
       }}
     >
-      <Card
-        href="https://github.com"
-        animate={{variant: 'scale-in-up', delay: 500}}
-      >
-        <Card.Icon icon={CopilotIcon} color="indigo" hasBackground />
-        <Card.Label>Limited</Card.Label>
-        <Card.Heading>Collaboration is the key to DevOps success</Card.Heading>
-        <Card.Description>
-          Everything you need to know about getting started with GitHub Actions.
-        </Card.Description>
-      </Card>
+      <Animate animate="scale-in-up">
+        <Card href="https://github.com">
+          <Card.Icon icon={CopilotIcon} color="indigo" hasBackground />
+          <Card.Label>Limited</Card.Label>
+          <Card.Heading>
+            Collaboration is the key to DevOps success
+          </Card.Heading>
+          <Card.Description>
+            Everything you need to know about getting started with GitHub
+            Actions.
+          </Card.Description>
+        </Card>
+      </Animate>
     </Grid.Column>
     <Grid.Column
       span={{
@@ -165,18 +197,17 @@ Use `delay` to stagger animations on adjacent elements.
         large: 6,
       }}
     >
-      <Card
-        href="https://github.com"
-        animate={{variant: 'scale-in-up', delay: 800}}
-      >
-        <Card.Icon icon={RocketIcon} hasBackground color="blue" />
-        <Card.Label>Limited</Card.Label>
-        <Card.Heading>GitHub Actions cheat sheet and more</Card.Heading>
-        <Card.Description>
-          In a recent study, 70% of organizations reported they had adopted
-          DevOps.
-        </Card.Description>
-      </Card>
+      <Animate animate="scale-in-up">
+        <Card href="https://github.com">
+          <Card.Icon icon={RocketIcon} hasBackground color="blue" />
+          <Card.Label>Limited</Card.Label>
+          <Card.Heading>GitHub Actions cheat sheet and more</Card.Heading>
+          <Card.Description>
+            In a recent study, 70% of organizations reported they had adopted
+            DevOps.
+          </Card.Description>
+        </Card>
+      </Animate>
     </Grid.Column>
   </Grid>
 </AnimationProvider>
@@ -188,15 +219,17 @@ Use `delay` to stagger animations on adjacent elements.
 
 ### AnimationProvider <Label>Required</Label>
 
-| Name                | Type                                                                                                            | Default              | Required | Description                                                                    |
-| ------------------- | --------------------------------------------------------------------------------------------------------------- | -------------------- | -------- | ------------------------------------------------------------------------------ |
-| `children`          | `ReactNode`                                                                                                     |                      | `true`   | The children to render within the `AnimationProvider`                          |
-| `disableAnimations` | `boolean`                                                                                                       |                      | `false`  | Prevents animations from running inside the provider                           |
-| `animationTrigger`  | <PropTableValues values={['click', 'on-visible']} addLineBreaks />                                              | `'on-visible'`       | `false`  | Controls the trigger method for the animation. One of `click` or `on-visible`. |
-| `visibilityOptions` | <PropTableValues values={['bottom-of-screen', 'middle-of-screen', 'about-to-leave', 'number']} addLineBreaks /> | `'bottom-of-screen'` | `false`  | Controls the intersection observer options for the animation.                  |
-| `runOnce`           | `boolean`                                                                                                       | `false`              | `false`  | Will persist the animation end-state after the animation has completed.        |
+| Name                    | Type                                                                                                            | Default              | Required | Description                                                                    |
+| ----------------------- | --------------------------------------------------------------------------------------------------------------- | -------------------- | -------- | ------------------------------------------------------------------------------ |
+| `children`              | `ReactNode`                                                                                                     |                      | `true`   | The children to render within the `AnimationProvider`                          |
+| `disableAnimations`     | `boolean`                                                                                                       |                      | `false`  | Prevents animations from running inside the provider                           |
+| `animationTrigger`      | <PropTableValues values={['click', 'on-visible']} addLineBreaks />                                              | `'on-visible'`       | `false`  | Controls the trigger method for the animation. One of `click` or `on-visible`. |
+| `visibilityOptions`     | <PropTableValues values={['bottom-of-screen', 'middle-of-screen', 'about-to-leave', 'number']} addLineBreaks /> | `'bottom-of-screen'` | `false`  | Controls the intersection observer options for the animation.                  |
+| `runOnce`               | `boolean`                                                                                                       | `false`              | `false`  | Will persist the animation end-state after the animation has completed.        |
+| `autoStaggerChildren`   | `boolean`                                                                                                       | `true`               |          | Will stagger the animations of the children using an incrementing delay        |
+| `staggerDelayIncrement` | `number`                                                                                                        | `100`                |          | Stagger delay increment. Should be used alongside `autoStaggerChildren`.       |
 
-### animate <Label>Required</Label>
+### Animate
 
 `animate` is a prop available on the following components:
 
