--- a/apps/docs/content/components/Label/index.mdx
+++ b/apps/docs/content/components/Label/index.mdx
@@ -47,7 +47,7 @@ Position the labels to clearly identify the object they’re informing.
 
 ### Content
 
-Use label with with short, scannable text. If possible, use a single word to describe the status of an object. Use two or more words if you need to describe a complex state or category. For example, “Limitied availability" or "Enterprise Only".
+Use Label with with short, scannable text. If possible, use a single word to describe the status of an object. Use two or more words if you need to describe a complex state or category. For example, “Limited availability" or "Enterprise only".
 
 ## Options
 
