--- a/apps/docs/content/components/Label/index.mdx
+++ b/apps/docs/content/components/Label/index.mdx
@@ -57,7 +57,7 @@ Labels come in three sizes: `small`, `medium`, and `large`.
 
 ### Small
 
-Use `small` size for inline text or list items.
+Use the `small` size for inline text or list items.
 
 <Box
   display="grid"
