--- a/apps/docs/content/components/Label/index.mdx
+++ b/apps/docs/content/components/Label/index.mdx
@@ -87,7 +87,7 @@ Use the `small` size for inline text or list items.
 
 ### Medium
 
-Use `medium` for medium sized headings introducing a section, or components such as `Card`.
+Use the `medium` size when paired with medium-sized headings or in components such as `Card`.
 
 <Box
   display="grid"
