--- a/apps/docs/content/components/Label/index.mdx
+++ b/apps/docs/content/components/Label/index.mdx
@@ -119,7 +119,7 @@ Use the `medium` size when paired with medium-sized headings or in components su
 
 ### Large
 
-Use `large` for large headings that introduce a page, like a `Hero` does.
+Use the `large` size when paired with large headings, such as in the `Hero` component.
 
 <div>
   <img
