--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -10,7 +10,7 @@ export default ComponentLayout
 
 ![An image showing the Pillar anatomy with an icon, a heading and a description in a vertical order.](https://github.com/primer/brand/assets/912236/c52debd2-4277-42c9-9a73-bd6bd087dd1e)
 
-- Icon: It provides a visual cue to the user about the content of the piller. Icon is optional.
+- Icon: An optional visual cue related to the content of the Pillar.
 - Heading: The main title of the Pillar. It should be short and concise.
 - Description: Short text that extends the information provided by the heading.
 
