--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -52,7 +52,7 @@ If displaying an icon, do so for all cards to achieve a visually balanced layout
   </Dont>
 </DoDontContainer>
 
-When presenting numerous pillars, we recommend stacking them vertically. You can use the [Grid](/components/Grid) or the [Stack](/components/Stack) component to achieve this. We recommend using a grid with 3 or 4 columns.
+When presenting more than four pillars, we recommend displaying them in multiple rows. You can use the [Grid](/components/Grid) or the [Stack](/components/Stack) component to achieve this. We recommend using a grid with 3 or 4 columns and balancing the number of pillars on each row.
 
 ![An image showing the Pillar anatomy with an icon, a heading and a description in a vertical order.](https://github.com/primer/brand/assets/912236/1d031ae9-bf4e-4e19-a7b7-c8cc0b7e5940)
 
