--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -16,7 +16,7 @@ export default ComponentLayout
 
 ## Usage
 
-Use pillars to group similar features or benefits together to easily scan and read. Pillars displays content in a familiar and recognizable style.
+Use pillars to group similar features or benefits together to easily scan and read. Pillars display content in a familiar and recognizable style.
 
 ### Stacked
 
