--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -59,7 +59,7 @@ When using an image as the visual asset, we recommend using the same aspect rati
   <Do>
     <img src="https://github.com/primer/brand/assets/912236/0ec93c16-7091-4ebb-a1a0-b0626de7833f" />
     <Caption>
-      Use the same image ratio and a similar lenght sizes for the content.
+      Use the same image ratio and a similar length sizes for the content.
     </Caption>
   </Do>
   <Dont>
