--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -124,6 +124,6 @@ The call to action label indicates the action or resource the card links to. It 
 
 ## Related components
 
-- To display non-navigational related content in a compact way, use the [Pillar](/components/Pillar) component.
-- To display a list of plain content items, use the [UnorderedList](/components/UnorderedList) or the [OrderedList](/components/OrderedList) component.
-- To display a single block of content to draw attention or create urgency around a user action, use the [CTABanner](/components/CTABanner) component.
+- [Pillar](/brand/components/Pillar): To display non-navigational related content in a compact way, use the  component.
+- [OrderedList](/brand/components/OrderedList): To display a list of plain content items
+- [CTABanner](/brand/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action
