--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -76,7 +76,7 @@ Cards typically appear in groups of three or four in desktop viewports. For smal
 <div>
   <CustomVideoPlayer
     width="100%"
-    src="https://github.com/primer/brand/assets/912236/e4ac4ed3-4190-4e8b-b467-364fe880aa30"
+    src="https://github.com/primer/brand/assets/912236/d8e76477-1b27-4be1-9bf5-d22186af8376"
   />
   <Caption>
     Stack cards vertically so that the content has enough line length.
@@ -124,6 +124,6 @@ The call to action label indicates the action or resource the card links to. It 
 
 ## Related components
 
-- [Pillar](/brand/components/Pillar): To display non-navigational related content in a compact way, use the  component.
-- [OrderedList](/brand/components/OrderedList): To display a list of plain content items
-- [CTABanner](/brand/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action
+- [Pillar](/components/Pillar): To display non-navigational related content in a compact way, use the component.
+- [OrderedList](/components/OrderedList): To display a list of plain content items
+- [CTABanner](/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action
