--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -60,7 +60,7 @@ When presenting more than four pillars, we recommend displaying them in multiple
 
 ### Align
 
-Pillars can be aligned to the start or center of the container. Aligning to the start is the default and recommended behavior. Use center alignment when in groups of 3 or 4 pillars and if their title and descriptions are short, so that the content is visually balanced and easy to scan.
+Pillars can be aligned to the start or center of the container. Aligning to the start is the default and recommended behavior. Use center alignment only when displaying a maximum of 4 pillars and the overall page design calls for this alignment, so that the content is visually balanced and easy to scan.
 
 <DoDontContainer>
   <Do>
